fixed the data to display correctly, need to align columns together

--- a/client/src/components/Inventory/inventoryContent.css
+++ b/client/src/components/Inventory/inventoryContent.css
@@ -100,6 +100,7 @@
   
   
   /* inventory items */
+
   .table-container {
     display: flex;
     flex-direction: column;
@@ -114,7 +115,19 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid #eee;
-    color:#242424
+    color:#242424;
+    align-items:center;
+  }
+
+  .header {
+    font-weight: bold;
+    background-color: #444444;
+    color:#eee;
+  }
+
+  .table {
+    display: flex;
+    flex-direction: column;
   }
   
   .table-row:last-child {
@@ -124,12 +137,17 @@
   .table-cell {
     flex: 1;
     padding: 10px;
+    border:1px solid black;
   }
-  
-  .header {
-    font-weight: bold;
-    background-color: #444444;
-    color:#eee;
+
+  .table-cell-img {
+    max-width: 100px;
+    max-height: 100px;
+    padding: 10px;
+  }
+
+  fieldset {
+    border:none;
   }
   
   /* inventory items media queries for ipad and smaller */
